--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   logger: ^1.3.0 # 콘솔창에서 결과물을 쉽게 확인할 수 있도록 하는 Log 라이브러리입니다.
   flutter_secure_storage: ^8.0.0 # 어플리케이션 Secure Storage를 쉽게 사용할 수 있도록 도와주는 라이브러리입니다. 암호화 되어 저장된다. 해시맵
   cached_network_image: ^3.4.1 # 이미 사용된 이미지를 재사용함 캐시 지원 web은 제외
+  pull_to_refresh: ^2.0.0 # 새로고침 위젯
 
 dev_dependencies:
   flutter_test:
